Updated geo-ipwhitelist.yml example

--- a/geo-ipwhitelist.yml
+++ b/geo-ipwhitelist.yml
@@ -1,8 +1,15 @@
+#Listed Countries: France
+#Listed Sublocations: YE-HD
+
 http:
   middlewares:
     middlewares-geoip-whitelist:
       ipWhiteList:
-        sourcerange:
-         # Whitelisted countries: FR
-         # FR IPs
-          - #.#.#.#
+        sourceRange:
+          # France IPs
+          - "#.#.#.#"
+          - "#.#.#.#"
+          # YE-HD IPs
+          - "#.#.#.#"
+          - "#.#.#.#"
+          
